# TwitterPy

./: .gitignore  db_test.sqlite3  pyproject.toml  requirements.txt
core/: settings.py  urls.py
tweets/: admin.py  middleware.py  tests.py  urls.py
tweets/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_bio_userprofile_birth_date_and_more.py  0004_tweet_likes.py  0005_tweet_image.py  0006_userprofile_dark_mode.py  0007_remove_userprofile_dark_mode.py
tweets/models/: __init__.py  tweets.py  userprofile.py
tweets/templates/: all_users.html  api_endpoints.html  base.html  create_tweet.html  followed_users.html  home.html  login.html  register.html  search_results.html  user_profile.html
tweets/views/: __init__.py  account_view.py  api_endpoints.py  delete_tweet_view.py  follow_user_view.py  forms.py  home.py  home_view.py  like_tweet.py  pythonanywhere_view.py  search_users_view.py  tweets_view.py  user_view.py
