[tool.poetry]
name = "twitterpyebac"
version = "0.1.0"
description = ""
authors = ["Alt0b11 <thanksuniverse333@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pillow = "^10.4.0"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
